tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = | { x { z, } }: { x: { y: Integer } } => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_5.kk:1:17
  │
1 │ let f = | { x { z, } }: { x: { y: Integer } } => 2
  │                 ^ No such property
  │
  = Available properties:
      y
