tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_9.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let bar = | props: {
  f: | { x: Integer } -> Integer
} =>
  let { f, } = props
  {x "hi"}.f()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_9.kk:5:6
  │
5 │   {x "hi"}.f()
  │      ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
