tests/snapshots/test_runner__tests__compiler__typecheck__do_statement_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo
  : | Null => Integer
  = | null => 123

do null.foo

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/do_statement_1.kk:5:4
  │
5 │ do null.foo
  │    ^^^^^^^^ Type Mismatch
  │
  = The body of do-expression must have the type of Null.
    But this expression has the type of:

        Integer
